--- a/config/sync/tour.tour.language-edit.yml
+++ b/config/sync/tour.tour.language-edit.yml
@@ -22,27 +22,24 @@ tips:
   language-edit-langcode:
     id: language-edit-langcode
     plugin: text
-    label: 'Language code'
+    label: Sprachkürzel
     body: '<p>Das Sprachkürzel einer Sprache kann auf der Website nicht geändert werde, da es vom System zum Identifizieren der Sprache genutzt wird.</p>'
     weight: 2
-    attributes:
-      data-id: edit-langcode-view
+    selector: '#edit-langcode-view'
   language-edit-label:
     id: language-edit-label
     plugin: text
-    label: 'Language name'
+    label: Sprachname
     body: '<p>Der Name der Sprache wird für alle Benutzer der Website in Englisch angezeigt. Die Namen von mitgelieferten Sprachen können mit dem Interface-Translation-Modul und Namen von mitgelieferten sowie benutzerdefinierten Sprache können mit dem Configuration-Translation-Modul übersetzt werden.</p>'
     weight: 3
-    attributes:
-      data-id: edit-label
+    selector: '#edit-label'
   language-edit-direction:
     id: language-edit-direction
     plugin: text
-    label: 'Language direction'
+    label: Sprachlaufrichtung
     body: '<p>Auswählen ob es sich um eine „Links-nach-rechts“ oder „Rechts-nach-links“ Sprache handelt.</p><p>Bitte beachten, dass nicht alle Themes „Rechts-nach-links“-Layouts unterstützen. Sollte „Rechts-nach-links“ ausgewählt sein, sollte das verwendete Theme im Hinblick darauf getestet werden.</p>'
     weight: 4
-    attributes:
-      data-id: edit-direction--wrapper--description
+    selector: '#edit-direction--wrapper--description'
   language-edit-continue:
     id: language-edit-continue
     plugin: text
