--- a/config/sync/webform.webform.kontakt.yml
+++ b/config/sync/webform.webform.kontakt.yml
@@ -12,7 +12,36 @@ id: kontakt
 title: Kontakt
 description: Standard-Kontaktformular
 category: ''
-elements: "name:\n  '#type': textfield\n  '#title': Name\n  '#title_display': before\n  '#required': true\ne_mail:\n  '#type': email\n  '#title': E-Mail\n  '#description': 'Geben Sie bitte Ihre Mailadresse an.'\n  '#title_display': before\n  '#required': true\n  '#required_error': 'Geben Sie bitte Ihre Mailadresse an.'\nbetreff:\n  '#type': textfield\n  '#title': Betreff\n  '#title_display': before\nihr_anliegen:\n  '#type': textarea\n  '#title': 'Ihr Anliegen'\n  '#required': true\n  '#pattern': '^((?!www|http|https).)*$'\n  '#pattern_error': 'Sie dürfen keine Webadressen verlinken, und nicht die Worte \"www\" \"http\" oder \"https\" verwenden.'\nmarkup:\n  '#type': webform_markup\n  '#markup': 'Wir fragen Ihren Namen und Mailadresse ab, damit wir Ihre Anfrage bearbeiten und ggf. mit Ihnen in Kontakt treten k&ouml;nnen. Weitere Hinweise in unserer <a data-entity-type=\"node\" data-entity-uuid=\"17550b5d-3da7-4a52-96e8-beb8878510cc\" href=\"/datenschutzerklaerung\" title=\"Datenschutzerklärung\">Datenschutzerkl&auml;rung</a>'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': Abschicken"
+elements: |-
+  name:
+    '#type': textfield
+    '#title': Name
+    '#title_display': before
+    '#required': true
+  e_mail:
+    '#type': email
+    '#title': E-Mail
+    '#description': 'Geben Sie bitte Ihre Mailadresse an.'
+    '#title_display': before
+    '#required': true
+    '#required_error': 'Geben Sie bitte Ihre Mailadresse an.'
+  betreff:
+    '#type': textfield
+    '#title': Betreff
+    '#title_display': before
+  ihr_anliegen:
+    '#type': textarea
+    '#title': 'Ihr Anliegen'
+    '#required': true
+    '#pattern': '^((?!www|http|https).)*$'
+    '#pattern_error': 'Sie dürfen keine Webadressen verlinken, und nicht die Worte "www" "http" oder "https" verwenden.'
+  markup:
+    '#type': webform_markup
+    '#markup': 'Wir fragen Ihren Namen und Mailadresse ab, damit wir Ihre Anfrage bearbeiten und ggf. mit Ihnen in Kontakt treten k&ouml;nnen. Weitere Hinweise in unserer <a data-entity-type="node" data-entity-uuid="17550b5d-3da7-4a52-96e8-beb8878510cc" href="/datenschutzerklaerung" title="Datenschutzerklärung">Datenschutzerkl&auml;rung</a>'
+  actions:
+    '#type': webform_actions
+    '#title': 'Submit button(s)'
+    '#submit__label': Abschicken
 css: ''
 javascript: ''
 settings:
