--- a/config/sync/webform.webform_options.gender.yml
+++ b/config/sync/webform.webform_options.gender.yml
@@ -9,4 +9,7 @@ _core:
   default_config_hash: 6WYQFjFAQkeNPRRklUX_i7UaJK_Uw3iNDU7ux2j3pCo
 id: gender
 label: Geschlecht
-options: "Male: Male\nFemale: Female\nTransgender: Transgender\n"
+options: |
+  Male: Male
+  Female: Female
+  Transgender: Transgender
