--- a/config/sync/webform.webform_options.months.yml
+++ b/config/sync/webform.webform_options.months.yml
@@ -9,4 +9,16 @@ _core:
   default_config_hash: Y0ajkmoLjJ568EZRzaBSy_vEejATn3EA2RTymPoGZ5U
 id: months
 label: Monate
-options: "Januar: Januar\nFebruar: Februar\nMärz: März\nApril: April\nMai: Mai\nJuni: Juni\nJuli: Juli\nAugust: August\nSeptember: September\nOktober: Oktober\nNovember: November\nDezember: Dezember\n"
+options: |
+  Januar: Januar
+  Februar: Februar
+  März: März
+  April: April
+  Mai: Mai
+  Juni: Juni
+  Juli: Juli
+  August: August
+  September: September
+  Oktober: Oktober
+  November: November
+  Dezember: Dezember
