--- a/config/sync/webform.webform_options.likert_ten_scale.yml
+++ b/config/sync/webform.webform_options.likert_ten_scale.yml
@@ -9,4 +9,14 @@ _core:
   default_config_hash: VtI_OJow8fKXIo4jyhi2UF_WmE6MQf94_fR9qctlv7s
 id: likert_ten_scale
 label: 'Likert: Zehnerskala'
-options: "1: 1\n2: 2\n3: 3\n4: 4\n5: 5\n6: 6\n7: 7\n8: 8\n9: 9\n10: 10\n"
+options: |
+  1: 1
+  2: 2
+  3: 3
+  4: 4
+  5: 5
+  6: 6
+  7: 7
+  8: 8
+  9: 9
+  10: 10
