--- a/config/sync/webform.webform_options.likert_would_you.yml
+++ b/config/sync/webform.webform_options.likert_would_you.yml
@@ -9,4 +9,9 @@ _core:
   default_config_hash: 98M-DPZLTuMVYsG1XrXy1h90nf3al-jgdqGJrW8Elcg
 id: likert_would_you
 label: 'Likert: Would You'
-options: "1: Definitiv Nicht\n2: Wahrscheinlich nicht\n3: Nicht sicher\n4: Wahrscheinlich\n5: Definitiv\n"
+options: |
+  1: Definitiv Nicht
+  2: Wahrscheinlich nicht
+  3: Nicht sicher
+  4: Wahrscheinlich
+  5: Definitiv
