--- a/config/sync/webform.webform_options.state_province_names.yml
+++ b/config/sync/webform.webform_options.state_province_names.yml
@@ -9,4 +9,66 @@ _core:
   default_config_hash: Dsbo0h8kGlwB0RgwOOPBhnQzwgoJXwsiqxznsQADipI
 id: state_province_names
 label: 'Staat/Provinz Namen'
-options: "Alabama: Alabama\nAlaska: Alaska\nAmerican Samoa': 'Amerikanisch Samoa'\nArizona: Arizona\nArkansas: Arkansas\nArmed Forces (Kanada, Europa, Afrika oder Naher Osten': 'Armed Forces (Kanada, Europa , Afrika oder Mittlerer Osten'\n'Armed Americas': 'Streitkräfte Americas'\n'Armed Forces Pacific': 'Armed Forces Pacific'\nKalifornien: Kalifornien\nColorado: Colorado\nConnecticut: Connecticut\nDelaware: Delaware\n'District of Columbia': 'District of Columbia'\n'Federate Staaten von Mikronesien': 'Federate Staaten von Mikronesien'\nFlorida: Florida\nGeorgia: Georgia\nGuam: Guam\nHawaii: Hawaii\nIdaho: Idaho\nIllinois: Illinois\nIndiana: Indiana\nIowa: Iowa\nKansas: Kansas\nKentucky: Kentucky\nLouisiana: Louisiana\nMaine: Maine\n'Marshall Islands': 'Marshall Islands'\nMaryland: Maryland\nMassachusetts: Massachusetts\nMichigan: Michigan\nMinnesota : Minnesota\nMississippi: Mississippi\nMissouri: Missouri\nMontana: Montana\nNebraska: Nebraska\nNevada: Nevada\n'New Hampshire': 'New Hampshire'\n'New Jersey' : 'New Jersey'\n'New Mexico': 'New Mexico'\n'New York': 'New York'\n'North Carolina': 'North Carolina'\n'North Dakota': 'North Dakota'\n'Northern Marianen': 'Northern Marianen'\nOhio: Ohio\nOklahoma: Oklahoma\nOregon: Oregon\nPalau: Palau\nPennsylvania: Pennsylvania\n'Puerto Rico': 'Puerto Rico'\n'Rhode Insel': 'Rhode Island'\n'South Carolina': 'South Carolina'\n'South Dakota': 'South Dakota'\nTennessee: Tennessee\nTexas: Texas\nUtah: Utah\nVermont: Vermont\n'Virgin Islands ':' Virgin Islands\nVirginia: Virginia\nWashington: Washington\n'West Virginia': 'West Virginia'\nWisconsin: Wisconsin\nWyoming: Wyoming\n"
+options: |
+  Alabama: Alabama
+  Alaska: Alaska
+  American Samoa': 'Amerikanisch Samoa'
+  Arizona: Arizona
+  Arkansas: Arkansas
+  Armed Forces (Kanada, Europa, Afrika oder Naher Osten': 'Armed Forces (Kanada, Europa , Afrika oder Mittlerer Osten'
+  'Armed Americas': 'Streitkräfte Americas'
+  'Armed Forces Pacific': 'Armed Forces Pacific'
+  Kalifornien: Kalifornien
+  Colorado: Colorado
+  Connecticut: Connecticut
+  Delaware: Delaware
+  'District of Columbia': 'District of Columbia'
+  'Federate Staaten von Mikronesien': 'Federate Staaten von Mikronesien'
+  Florida: Florida
+  Georgia: Georgia
+  Guam: Guam
+  Hawaii: Hawaii
+  Idaho: Idaho
+  Illinois: Illinois
+  Indiana: Indiana
+  Iowa: Iowa
+  Kansas: Kansas
+  Kentucky: Kentucky
+  Louisiana: Louisiana
+  Maine: Maine
+  'Marshall Islands': 'Marshall Islands'
+  Maryland: Maryland
+  Massachusetts: Massachusetts
+  Michigan: Michigan
+  Minnesota : Minnesota
+  Mississippi: Mississippi
+  Missouri: Missouri
+  Montana: Montana
+  Nebraska: Nebraska
+  Nevada: Nevada
+  'New Hampshire': 'New Hampshire'
+  'New Jersey' : 'New Jersey'
+  'New Mexico': 'New Mexico'
+  'New York': 'New York'
+  'North Carolina': 'North Carolina'
+  'North Dakota': 'North Dakota'
+  'Northern Marianen': 'Northern Marianen'
+  Ohio: Ohio
+  Oklahoma: Oklahoma
+  Oregon: Oregon
+  Palau: Palau
+  Pennsylvania: Pennsylvania
+  'Puerto Rico': 'Puerto Rico'
+  'Rhode Insel': 'Rhode Island'
+  'South Carolina': 'South Carolina'
+  'South Dakota': 'South Dakota'
+  Tennessee: Tennessee
+  Texas: Texas
+  Utah: Utah
+  Vermont: Vermont
+  'Virgin Islands ':' Virgin Islands
+  Virginia: Virginia
+  Washington: Washington
+  'West Virginia': 'West Virginia'
+  Wisconsin: Wisconsin
+  Wyoming: Wyoming
