Entity add Widget nicht mehr auf Feld Spieler in Mannschaft anzeigen.

--- a/config/sync/field.field.node.team.field_team_players.yml
+++ b/config/sync/field.field.node.team.field_team_players.yml
@@ -11,11 +11,11 @@ dependencies:
 third_party_settings:
   entityconnect:
     buttons:
-      button_add: '0'
-      button_edit: '0'
+      button_add: 1
+      button_edit: 1
     icons:
-      icon_add: '0'
-      icon_edit: '0'
+      icon_add: 0
+      icon_edit: 0
 id: node.team.field_team_players
 field_name: field_team_players
 entity_type: node
