Neues Feld, um Spieler von Usern zu referenzieren. Die alten User-Felder Bild, Vor- und Nachname gelöscht.

--- a/config/sync/block.block.bartik_search.yml
+++ b/config/sync/block.block.bartik_search.yml
@@ -16,7 +16,7 @@ provider: null
 plugin: search_form_block
 settings:
   id: search_form_block
-  label: Search
+  label: Suche
   provider: search
   label_display: visible
   page_id: ''
