--- a/config/sync/webform.webform_options.languages.yml
+++ b/config/sync/webform.webform_options.languages.yml
@@ -8,5 +8,5 @@ dependencies:
 _core:
   default_config_hash: vDwaQMB485SRDS5QUFJf8awBp0DdlOYSMnYsLiw1l5s
 id: languages
-label: Languages
+label: Sprachen
 options: ''
