--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -3,12 +3,8 @@ langcode: de
 status: true
 dependencies:
   config:
-    - field.field.user.user.field_user_first_name
-    - field.field.user.user.field_user_last_name
-    - field.field.user.user.user_picture
-    - image.style.thumbnail
+    - field.field.user.user.field_matching_player
   module:
-    - image
     - path
     - user
 _core:
@@ -20,53 +16,39 @@ mode: default
 content:
   account:
     weight: 0
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   contact:
-    weight: 5
+    weight: 6
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
-  field_user_first_name:
-    weight: 1
+  field_matching_player:
+    weight: 4
     settings:
+      match_operator: CONTAINS
+      match_limit: 10
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_user_last_name:
-    weight: 2
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
+    type: entity_reference_autocomplete
     region: content
   language:
-    weight: 4
+    weight: 5
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   path:
     type: path
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     region: content
   timezone:
-    weight: 6
+    weight: 7
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
-  user_picture:
-    type: image_image
-    settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
-    third_party_settings: {  }
-    weight: 3
-    region: content
 hidden:
   langcode: true
