--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -3,12 +3,8 @@ langcode: de
 status: true
 dependencies:
   config:
-    - field.field.user.user.field_user_first_name
-    - field.field.user.user.field_user_last_name
-    - field.field.user.user.user_picture
-    - image.style.portrait
+    - field.field.user.user.field_matching_player
   module:
-    - image
     - user
 _core:
   default_config_hash: L2mtwGWH_7wDRCMIR4r_Iu_jmvQ10DV1L8ht8iNZ5qY
@@ -17,40 +13,23 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
-  field_user_first_name:
-    weight: 6
+  field_matching_player:
+    weight: 2
     label: above
     settings:
-      link_to_entity: false
+      link: true
     third_party_settings: {  }
-    type: string
-    region: content
-  field_user_last_name:
-    weight: 7
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
+    type: entity_reference_label
     region: content
   masquerade:
-    weight: 50
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   member_for:
-    weight: 5
+    weight: 1
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
-  user_picture:
-    type: image
-    weight: 0
-    settings:
-      image_style: portrait
-      image_link: content
-    third_party_settings: {  }
-    label: hidden
-    region: content
 hidden:
   langcode: true
