--- a/config/sync/devel.settings.yml
+++ b/config/sync/devel.settings.yml
@@ -6,7 +6,9 @@ error_handlers:
 rebuild_theme: false
 debug_mail_file_format: '%to-%subject-%datetime.mail.txt'
 debug_mail_directory: 'temporary://devel-mails'
-devel_dumper: default
+devel_dumper: var_dumper
 _core:
   default_config_hash: Oh8B61MshOYvTf_pcKAeB8_OL7C_snqYbbLjqpgfdTM
 langcode: de
+debug_logfile: 'temporary://drupal_debug.txt'
+debug_pre: false
