--- a/config/sync/webform.webform_options.languages.yml
+++ b/config/sync/webform.webform_options.languages.yml
@@ -9,4 +9,6 @@ _core:
   default_config_hash: vDwaQMB485SRDS5QUFJf8awBp0DdlOYSMnYsLiw1l5s
 id: languages
 label: Sprachen
+category: null
+likert: false
 options: ''
