--- a/config/sync/block.block.newsauthor.yml
+++ b/config/sync/block.block.newsauthor.yml
@@ -17,7 +17,7 @@ settings:
   id: hsk_news_author
   label: 'Der Autor'
   provider: hsk_news
-  label_display: visible
+  label_display: '0'
   context_mapping:
     node: '@node.node_route_context:node'
 visibility:
