--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "drupal/devel": "^4.1",
         "drupal/editor_file": "^1.5",
         "drupal/embed": "^1.4",
-        "drupal/entity_embed": "^1.1",
+        "drupal/entity_embed": "^1.2",
         "drupal/entityconnect": "^2.0@RC",
         "drupal/eu_cookie_compliance": "^1.14",
         "drupal/eva": "^2.1",
@@ -44,7 +44,7 @@
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/inline_responsive_images": "^2.2",
         "drupal/libraries": "^3.0@beta",
-        "drupal/linkit": "^5",
+        "drupal/linkit": "6.0.0-beta3",
         "drupal/maillog": "^1.0@beta",
         "drupal/markup": "^1.0@beta",
         "drupal/masquerade": "^2.0@beta",
