--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -10,12 +10,14 @@ dependencies:
     - field.field.node.event.field_event_location
     - field.field.node.event.field_event_room
     - field.field.node.event.field_event_type
+    - field.field.node.event.field_uhrzeit
     - node.type.event
   module:
     - datetime
     - hms_field
     - path
     - text
+    - timefield
 id: node.event.default
 targetEntityType: node
 bundle: event
@@ -33,7 +35,7 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -45,7 +47,7 @@ content:
     third_party_settings: {  }
   field_ev_end_time:
     type: hms_default
-    weight: 4
+    weight: 5
     region: content
     settings:
       format: 'h:mm'
@@ -54,7 +56,7 @@ content:
     third_party_settings: {  }
   field_ev_start_time:
     type: hms_default
-    weight: 3
+    weight: 4
     region: content
     settings:
       format: 'h:mm'
@@ -63,7 +65,7 @@ content:
     third_party_settings: {  }
   field_event_location:
     type: string_textfield
-    weight: 7
+    weight: 8
     region: content
     settings:
       size: 60
@@ -71,7 +73,7 @@ content:
     third_party_settings: {  }
   field_event_room:
     type: string_textfield
-    weight: 6
+    weight: 7
     region: content
     settings:
       size: 60
@@ -79,20 +81,46 @@ content:
     third_party_settings: {  }
   field_event_type:
     type: options_buttons
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_uhrzeit:
+    type: timefield_standard_widget
+    weight: 3
+    region: content
+    settings:
+      disable_plugin: false
+      input_format:
+        separator: ':'
+        showLeadingZero: false
+        showMinutesLeadingZero: true
+        showPeriod: true
+        periodSeparator: ''
+        showHours: true
+        showMinutes: true
+        am_text: AM
+        pm_text: PM
+        minute_interval: 5
+        showCloseButton: false
+        closeButtonText: Done
+        showNowButton: false
+        nowButtonText: Now
+        showDeselectButton: false
+        deselectButtonText: Deselect
+        myPosition: 'left top'
+        atPosition: 'left bottom'
+    third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 8
+    weight: 9
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   node_class:
     type: string_textfield
-    weight: 14
+    weight: 15
     region: content
     settings:
       size: 60
@@ -100,27 +128,27 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 11
+    weight: 12
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 121
+    weight: 16
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 12
+    weight: 13
     region: content
     settings:
       display_label: true
@@ -135,7 +163,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 9
+    weight: 10
     region: content
     settings:
       match_operator: CONTAINS
