--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -10,11 +10,13 @@ dependencies:
     - field.field.node.event.field_event_location
     - field.field.node.event.field_event_room
     - field.field.node.event.field_event_type
+    - field.field.node.event.field_uhrzeit
     - node.type.event
   module:
     - datetime
     - hms_field
     - text
+    - timefield
     - user
 id: node.event.default
 targetEntityType: node
@@ -44,7 +46,7 @@ content:
       format: 'h:mm'
       leading_zero: true
     third_party_settings: {  }
-    weight: 4
+    weight: 5
     region: content
   field_ev_start_time:
     type: hms_default_formatter
@@ -53,7 +55,7 @@ content:
       format: 'h:mm'
       leading_zero: true
     third_party_settings: {  }
-    weight: 3
+    weight: 4
     region: content
   field_event_location:
     type: string
@@ -61,7 +63,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 6
+    weight: 7
     region: content
   field_event_room:
     type: string
@@ -69,7 +71,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 7
+    weight: 8
     region: content
   field_event_type:
     type: entity_reference_label
@@ -77,7 +79,20 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 5
+    weight: 6
+    region: content
+  field_uhrzeit:
+    type: timefield_default_formatter
+    label: above
+    settings:
+      display_format:
+        hour: G
+        minute: i
+        separator: ':'
+        period: none
+        periodSeparator: ''
+    third_party_settings: {  }
+    weight: 3
     region: content
   links:
     settings: {  }
