--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.event.field_event_location
     - field.field.node.event.field_event_room
     - field.field.node.event.field_event_type
+    - field.field.node.event.field_uhrzeit
     - node.type.event
   module:
     - text
@@ -40,4 +41,5 @@ hidden:
   field_event_location: true
   field_event_room: true
   field_event_type: true
+  field_uhrzeit: true
   langcode: true
