--- a/config/sync/linkit.linkit_profile.default.yml
+++ b/config/sync/linkit.linkit_profile.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - node
 _core:
   default_config_hash: Tt8DtxZ3Nooo0PoWPpJvszA3R_5d8MmpUW7LM_R-BzY
-label: Standard
+label: Master
 id: default
 description: 'A default Linkit profile'
 matchers:
