--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -10,11 +10,13 @@ dependencies:
     - field.field.node.event.field_event_location
     - field.field.node.event.field_event_room
     - field.field.node.event.field_event_type
+    - field.field.node.event.field_uhrzeit
     - node.type.event
   module:
     - datetime
     - hms_field
     - text
+    - time_field
     - user
 id: node.event.default
 targetEntityType: node
@@ -78,6 +80,15 @@ content:
       link: false
     third_party_settings: {  }
     weight: 6
+    region: content
+  field_uhrzeit:
+    type: time_range_formatter
+    label: above
+    settings:
+      time_format: 'H:i'
+      timerange_format: 'start - end'
+    third_party_settings: {  }
+    weight: 3
     region: content
   links:
     settings: {  }
