--- a/config/sync/views.view.events_list.yml
+++ b/config/sync/views.view.events_list.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_ev_date
     - field.storage.node.field_ev_start_time
     - field.storage.node.field_event_room
+    - field.storage.node.field_uhrzeit
     - node.type.event
     - system.menu.main
     - taxonomy.vocabulary.event_type
@@ -15,6 +16,7 @@ dependencies:
     - hms_field
     - node
     - taxonomy
+    - time_field
     - user
 id: events_list
 label: Terminkalender
@@ -793,6 +795,70 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        field_uhrzeit:
+          id: field_uhrzeit
+          table: node__field_uhrzeit
+          field: field_uhrzeit
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: from
+          type: time_range_formatter
+          settings:
+            time_format: 'H:i'
+            timerange_format: start
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
       pager:
         type: some
         options:
@@ -813,6 +879,7 @@ display:
       tags:
         - 'config:field.storage.node.field_ev_date'
         - 'config:field.storage.node.field_ev_start_time'
+        - 'config:field.storage.node.field_uhrzeit'
   page_1:
     id: page_1
     display_title: Page
