--- a/config/sync/views.view.events_list.yml
+++ b/config/sync/views.view.events_list.yml
@@ -664,21 +664,19 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        field_ev_start_time:
-          id: field_ev_start_time
-          table: node__field_ev_start_time
-          field: field_ev_start_time
+        field_uhrzeit_1:
+          id: field_uhrzeit_1
+          table: node__field_uhrzeit
+          field: field_uhrzeit
           relationship: none
           group_type: group
-          admin_label: ''
+          admin_label: Uhrzeit
           plugin_id: field
           label: ''
           exclude: false
           alter:
-            alter_text: true
-            text: |-
-              <div class="date">{{ field_ev_date }}</div>
-              <div class="time">{{ field_ev_start_time }}</div>
+            alter_text: false
+            text: ''
             make_link: false
             path: ''
             absolute: false
@@ -715,12 +713,12 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: value
-          type: hms_default_formatter
+          click_sort_column: from
+          type: time_range_formatter
           settings:
-            format: 'h:mm'
-            leading_zero: 1
-          group_column: value
+            time_format: 'H:i'
+            timerange_format: start
+          group_column: ''
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -795,70 +793,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        field_uhrzeit:
-          id: field_uhrzeit
-          table: node__field_uhrzeit
-          field: field_uhrzeit
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: field
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: from
-          type: time_range_formatter
-          settings:
-            time_format: 'H:i'
-            timerange_format: start
-          group_column: ''
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
       pager:
         type: some
         options:
@@ -878,7 +812,6 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_ev_date'
-        - 'config:field.storage.node.field_ev_start_time'
         - 'config:field.storage.node.field_uhrzeit'
   page_1:
     id: page_1
